--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,13 @@
 .generalRadius{
     border-radius: var(--generalBorderRadius);
 }
+
+.specialMenu1{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+    align-items: center;
+}
