--- a/src/main.css
+++ b/src/main.css
@@ -11,3 +11,26 @@
     flex-wrap: nowrap;
     align-items: center;
 }
+
+.transition1{
+    transition: all 300ms;
+}
+
+h1{
+	font-size: 55px;
+}
+h2{
+	font-size: 40px;
+}
+h3{
+	font-size: 28px;
+}
+h4{
+	font-size: 20px;
+}
+h5{
+	font-size: 18px;
+}
+h6{
+	font-size: 14px;
+}
