--- a/src/root.css
+++ b/src/root.css
@@ -14,7 +14,15 @@
     --blue2: #6982F6;
     --blue3: #464EF9;
     --blue4: #190EF9;
+    --blue5: #4f95ff;
     --lightBlue1: #9FDEFF;
+    
+    --black1: #111111;
+    --black2: #222222;
+    --black3: #333333;
+    --black4: #444444;
+    --black5: #555555;
+    
     
     --generalBorderRadius: 15px;
 }
