--- a/src/root.css
+++ b/src/root.css
@@ -10,6 +10,8 @@
     --claretRed3: #BE3636;
     --claretRed4: #C54E4E;
     
+    --green1: #77dc6b;
+    
     --blue1: #A1CAFF;
     --blue2: #6982F6;
     --blue3: #464EF9;
